--- a/Junior/easybank-landing-page-main/src/index.css
+++ b/Junior/easybank-landing-page-main/src/index.css
@@ -1,43 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
-
-:root {
-  --c-prim-blue: hsl(233, 26%, 24%);
-  --c-prim-green: hsl(136, 65%, 51%);
-  --c-prim-cyan: hsl(192, 70%, 51%);
-
-  --c-neut-white: hsl(0, 0%, 100%);
-  --c-neut-blue: hsl(233, 8%, 62%);
-  --c-neut-lightBlue: hsl(220, 16%, 96%);
-  --c-neut-lightGray: hsl(0, 0%, 98%);
-
-  --base-fs: 14px;
-  --ff: "Public Sans", Helvetica, sans-serif;
-
-  --max-w-desktop: 1100px;
-  --min-w-desktop: 960px;
-
-  --theme-gradient: linear-gradient(
-    to right,
-    var(--c-prim-green),
-    var(--c-prim-cyan)
-  );
-  --bg-img-desktop: url(./images/bg-intro-desktop.svg);
-  --bg-img-mobile: url(./images/bg-intro-mobile.svg);
-}
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
-  font-family: var(--ff);
-  color: var(--c-prim-blue);
-  /* padding: var(--px-desktop); */
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
-  /* max-width: 1000px;
-  margin: 0 auto; */
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
