--- a/Junior/easybank-landing-page-main/src/index.css
+++ b/Junior/easybank-landing-page-main/src/index.css
@@ -1,3 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
+
+:root {
+  --prim-blue: hsl(233, 26%, 24%);
+  --prim-green: hsl(136, 65%, 51%);
+  --prim-cyan: hsl(192, 70%, 51%);
+
+  --neut-white: hsl(0, 0%, 100%);
+  --neut-blue: hsl(233, 8%, 62%);
+  --neut-grayblue: hsl(220, 16%, 96%);
+  --neut-lightgray: hsl(0, 0%, 98%);
+
+  --ff: "Public Sans", Helvetica, sans-serif; /* 300, 400, 700 */
+
+  --theme-gradient: linear-gradient(
+    140deg,
+    var(--prim-green),
+    var(--prim-cyan)
+  );
+
+  --bg-desktop: url(./assets/images/bg-intro-desktop.svg);
+  --bg-mobile: url(./assets/images/bg-intro-mobile.svg);
+}
+
 *,
 *::before,
 *::after {
